[package]
name = "bevy_mod_observable_timer"
version = "0.2.0"
authors = ["Rob Grindeland <rgrindeland@gmail.com>"]
edition = "2021"
description = "An observer-based timer for bevy"
readme = "README.md"
repository = "https://github.com/grind086/bevy_mod_observable_timer"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "observer", "timer"]

[dependencies]
bevy = { version = "0.15", default-features = false }
